--- a/package.json
+++ b/package.json
@@ -2,22 +2,27 @@
   "name": "react-native-byron-keyboard",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [
     "react-native"
   ],
-  "author": "",
-  "license": "",
+  "author": "byron <472647301@qq.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/472647301/react-native-byron-keyboard#readme",
   "peerDependencies": {
-    "react-native": "^0.41.2"
-  },
-  "dependencies": {
-    "react-native-yusha-customkeyboard": "^0.1.3"
+    "react": "^16.0",
+    "react-native": ">=0.57 <0.60"
   },
   "devDependencies": {
+    "@types/react": "^16.8.23",
+    "@types/react-native": "^0.60.2",
+    "react": "^16.8.6",
+    "react-native": "^0.60.4",
     "typescript": "^3.5.3"
-  }
+  },
+  "dependencies": {}
 }
